--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
                     </tr>
                     <tr>
                         <td class="property">Font-Family</td>
-                        <td>font-family: 'Montserrat', sans-serif</td>
-                        <td>font-family: 'Montserrat', sans-serif</td>
+                        <td>'Montserrat', sans-serif</td>
+                        <td>'Montserrat', sans-serif</td>
                         <td>'Raleway', sans-serif</td>
                         <td>'IBM Plex Mono', monospace</td>
                     </tr>
@@ -256,7 +256,7 @@
                         <td>text-transform: uppercase</td>
                         <td>text-transform: uppercase</td>
                         <td>inline styling varies<br> i.e., &lt;strong&gt;, &lt;em&gt;</td>
-                        <td>background-color</td>
+                        <td>background-color: <em>chosen color</em></td>
                     </tr>
                 </tbody>
             </table>
