--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <nav>
-        <span class="name">Esohi</span>
+        <span class="name"><a href="https://github.com/esohi?tab=repositories" target="_blank">Esohi</a></span>
         <a href="#colors">Colors</a>
         <a href="#fonts">Fonts</a>
         <a href="#text_styles">Text Styles</a>
